[tool.poetry]
name = "business-card-generator"
version = "0.1.0"
description = ""
authors = ["Matan-Biton <Matan.bit97@gmail.com>"]
readme = "README.md"
packages = [{include = "business_card_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^13.15"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
